kustomize/arr-stack/lidarr/lidarr-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
spec:
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.253.17
  selector:
    app: lidarr
  type: LoadBalancer
  ports:
    - port: 8686
      targetPort: lidarr
