kustomize/arr-stack/lidarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`musics-k8s.vinicima.com`)
      kind: Rule
      services:
        - name: lidarr
          port: 8686
      middlewares:
        - name: body-size-50m
          namespace: traefik
  tls:
    secretName: vinicima-com-tls
